--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+.shadow-box:hover {
+   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12)
+}
 main.container {
     padding-top: 10px;
 }
