--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,148 @@ main.container {
 .payments {
     font-size: 1.5em;
 }
+.mini-img.active {
+    background-color: white !important;
+    border: 1px solid rgba(0,0,0,.125);
+}
+.add-cart-tag {
+    opacity: 0;
+    height: 35px;
+    line-height: 35px;
+    background-color: #dc3545 !important;
+}
+.add-cart-tag-control:hover > .add-cart-tag{
+    opacity: 1;
+
+}
+.add-cart-tag-control:hover > .card{
+    border: 1px solid #dc3545 !important;
+    border-radius: 0;
+}
+
+/* Conatct start */
+
+.header-title
+{
+    text-align: center;
+    color:#dc3545;
+}
+
+#tip
+{
+    display:none;
+}
+
+.fadeIn
+{
+    animation-duration: 3s;
+}
+
+.textarea-contact
+{
+    resize:none;
+}
+
+.btn-send
+{
+    border:1px solid #dc3545;
+    background:#dc3545;
+    color:#fff;
+}
+
+.btn-send:hover
+{
+    border:1px solid #dc3545;
+    background:#fff;
+    color:#dc3545;
+    transition:background 0.5s;
+}
+
+.second-portion
+{
+    margin-top:50px;
+}
+
+@import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css";
+@import "http://fonts.googleapis.com/css?family=Roboto:400,500";
+
+.box > .icon {
+    text-align: center;
+    position: relative;
+}
+.box > .icon > .image {
+    position: relative;
+    z-index: 2;
+    margin: auto;
+    width: 88px;
+    height: 88px;
+    border: 8px solid white;
+    line-height: 88px;
+    border-radius: 50%;
+    background: #dc3545;
+    vertical-align: middle;
+}
+.box > .icon > .image > i {
+    font-size:
+            36px !important;
+    color: #fff !important;
+}
+.box > .icon > .info {
+    margin-top: -24px;
+    background: rgba(0, 0, 0, 0.04);
+    border: 1px solid #e0e0e0;
+    padding: 30px 0 10px 0;
+    min-height:163px;
+}
+.box > .icon > .info > h3.title {
+    font-family: "Robot",sans-serif !important;
+    font-size: 16px;
+    color: #222;
+    font-weight: 700;
+}
+.box > .icon > .info > p {
+    font-family: "Robot",sans-serif !important;
+    font-size: 13px;
+    color: #666;
+    line-height: 1.5em;
+    margin: 20px;
+}
+.box > .icon > .info > .more a {
+    font-family: "Robot",sans-serif !important;
+    font-size: 12px;
+    color: #222;
+    line-height: 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+.box > .icon:hover > .info > .more > a {
+    color: #fff;
+    padding: 6px 8px;
+    background-color: #63B76C;
+}
+.box .space {
+    height: 30px;
+}
+
+@media only screen and (max-width: 768px)
+{
+    .contact-form
+    {
+        margin-top:25px;
+    }
+
+    .btn-send
+    {
+        width: 100%;
+        padding:10px;
+    }
+
+    .second-portion
+    {
+        margin-top:25px;
+    }
+}
+/* Conatct end */
+.hover-pointer:hover {
+    cursor: pointer;
+}
